# macLLM-forked

./: .gitignore  pyproject.toml
macllm/: llm_providers.py  macllm.py  ui.py
test/: test_llm_providers.py
