[project]
name = "macllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "certifi>=2024.12.14",
    "openai>=1.54.4",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
